--- a/templates/portfolio_v2.html
+++ b/templates/portfolio_v2.html
@@ -196,6 +196,24 @@
                 </div>
             </div>
 
+            <div class="col-lg-4 col-md-6">
+                <div class="project project-radius project-success">
+                    <div class="project-content">
+                        <h3 class="lead">
+                            To-do List Website
+                        </h3>
+                        <p>
+                            In this website you can create your own <strong>to-do list</strong> that will be saved for
+                            future use inside your personal user account. I <strong>do NOT share</strong> your data with anyone
+                        </p>
+                        <a href="https://pablo-todo-list.herokuapp.com" target="_blank"><img
+                            class="project-img"
+                            src='{{ url_for("static", filename="img/todo.png")}}'
+                            alt="project-7-img"></a>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
