--- a/templates/portfolio_v2.html
+++ b/templates/portfolio_v2.html
@@ -206,7 +206,7 @@
                             In this website you can create your own <strong>to-do list</strong> that will be saved for
                             future use inside your personal user account. I <strong>do NOT share</strong> your data with anyone.
                         </p>
-                        <a href="https://pablo-todo-list.herokuapp.com" target="_blank"><img
+                        <a href="https://todo-list-uboldi.up.railway.app" target="_blank"><img
                             class="project-img"
                             src='{{ url_for("static", filename="img/todo.png")}}'
                             alt="project-7-img"></a>
